--- a/Circles/CircleMemberAnswer.html
+++ b/Circles/CircleMemberAnswer.html
@@ -102,7 +102,7 @@ Point:
 	<option class="selectarea" value="4">とても忙しい</option>
 		</select></div>
 
-<div class="inputdes">4.　以上の項目などから総合的に評価をお願いします。 </div>
+<div class="inputdes">4.　以上の項目などから総合的に評価をお願いします</div>
 <div class="inputbox"><select class="textarea">
 	<option class="selectarea" value="1">あまりよくない</option>
 	<option class="selectarea" value="2">おおむねよい</option>
