--- a/Abroad/area1.html
+++ b/Abroad/area1.html
@@ -5,7 +5,7 @@
 <link rel="stylesheet" href="../CSS/Top.css" type="text/css">
 
 <meta http-equiv="Content-Script-Type" content="text/javascript">
-<title>area1</title>
+<title>ヨーロッパ</title>
 </head>
 <body style="background-image : url(../img/a9.png)">
 <div id="Container">
@@ -75,6 +75,7 @@ Point:
 </div>
 
 <div id="areas">
+<p>ヨーロッパ</p>
 <img id="area1" class="area" src="../img/wm/area1-1.png" >
 </div>
 
@@ -131,14 +132,16 @@ Point:
 
 </div>
 
-
-地図→エリア→大学→（ページ飛ぶ）→閲覧回答全てを一つのページでできるようにする＝詰め込む
 </div>
 
 </div>
 <script type="text/javascript" src="../JS/jquery.js"></script>
 <script type="text/javascript">
-//set z-index
+hoverarea(1);
+
+for(i=0;i<=47;i++){
+	hoveruniA(i);
+}
 
 
 //sideeffect;hover
@@ -151,6 +154,7 @@ $(".Side").hover(
 	}
 )
 
+
 //hide in the beginning
 
 
@@ -161,28 +165,15 @@ function hoverarea(i){
 	$('#area'+i).attr('src','img/wm/area'+i+'-1.png')}
 );
 }
-function hovercoun(i){
-	$("#coun"+i).hover(function(){
-	$('#coun'+i).attr('src','img/wm/coun'+i+'-2.png')},function(){
-	$('#coun'+i).attr('src','img/wm/coun'+i+'-1.png')}
-);
-
-}
 
 
 function hoveruniA(i){
 	$("#uniA"+i).hover(function(){
 	$('#uniA'+i).attr('src','img/wm/icon.png')},function(){
-	$('#uniA'+i).attr('src','img/wm/uniA'+i+'-s.png')}
+	$('#uniA'+i).attr('src','img/wm/uniA'+i+'.png')}
 );
 }
 
-function hoveruniC(i){
-	$("#uniC"+i).hover(function(){
-	$('#uniC'+i).attr('src','img/wm/icon.png')},function(){
-	$('#uniC'+i).attr('src','img/wm/uniC'+i+'-s.png')}
-);
-}
 
 </script>
 </body>
