--- a/NewProjects/NPsee.html
+++ b/NewProjects/NPsee.html
@@ -3,16 +3,16 @@
 <title>NPsee</title>
 <meta http-equiv="Content-Type" content="text/html;charset=UTF-8">
 <meta http-equiv="Content-Style-Type" content="text/css">
-<link rel="stylesheet" href="CSS/Top.css" type="text/css">
+<link rel="stylesheet" href="../CSS/Top.css" type="text/css">
 <meta http-equiv="Content-Script-Type" content="text/javascript">
 </head>
-<body style="background-image : url(img/a9.png)">
+<body style="background-image : url(../img/a9.png)">
 <div id="Container">
 
 <div id="Sidebar">
 <div id="SideContent1">
 <div id="SideLogo">
-<img src="img/uniA1-b.jpg" width="184px">
+<img src="../img/uniA1-b.jpg" width="184px">
 </div>
 <div id="SideName">
 Name:
@@ -77,7 +77,7 @@ Project一覧
 
 
 <div id="ProjectList">
-<a href=""
+<a href=""></a>
 </div>
 
 
@@ -86,7 +86,7 @@ Project一覧
 </div>
 
 </div>
-<script type="text/javascript" src="JS/jquery.js"></script>
+<script type="text/javascript" src="../JS/jquery.js"></script>
 <script type="text/javascript">
 $(".Side").hover(
 	function(){
