--- a/Abroad/demo4.html
+++ b/Abroad/demo4.html
@@ -72,7 +72,7 @@ Point:
 <div id="MainContent">
 
 <h1 class="AbroadTitle">
-	
+みんなこんな大学行ってます。
 </h1>
 
 <div id="wmback">
@@ -93,10 +93,10 @@ Point:
 </div>
 <script type="text/javascript" src="../JS/jquery.js"></script>
 <script type="text/javascript">
-//set z-index
-$("#areas").css('z-index','10');
-$("#wmback").css('z-index','1');
 
+for(i=0;i<=6;i++){
+	hoverarea(i);
+}
 
 //sideeffect;hover
 $(".Side").hover(
