--- a/Circles/ClubCircleList/ClubCircleExample.html
+++ b/Circles/ClubCircleList/ClubCircleExample.html
@@ -69,17 +69,61 @@ Point:
 
 <div id="MainContent">
 
-<div id="TopTitle">
-あなたの答えでできてます。MoaTips。
+<div class="ClubCircleList">
+
+
+<div class="ClubCircleListTitle">
+<img src="../../img/CircleImg/CircleTitle.jpg">
+<p class="ClubCircleName">
+M*E*N*T*S*U*Y*U	
+</p>
 </div>
-<div id="TopBeginner">
-Beginner</div>
-<div id="TopAbroad">
-Abroad</div>
-<div id="TopCircle">
-Circle</div>
-<div id="TopNewProject">
-NewProject</div>
+
+<div class="ClubCircleListContent">
+<img src="../../img/CircleImg/CircleCategory.jpg">
+<p class="ClubCircleListCategory">
+メンバー数
+</p>
+<p class="ClubCircleListDifferent">
+右の写真は500*500の大きさのボックスに入るよぷ
+</p>
+</div>
+
+<div class="ClubCircleListContent">
+<img src="../../img/CircleImg/CircleCategory.jpg">
+<p class="ClubCircleListCategory">
+活動日
+</p>
+<p class="ClubCircleListDifferent">
+ここにそれぞれの内容がはいるお
+</p>
+</div>
+
+<div class="ClubCircleListContent">
+<img src="../../img/CircleImg/CircleCategory.jpg">
+<p class="ClubCircleListCategory">
+活動場所
+</p>
+<p class="ClubCircleListDifferent">
+ここにそれぞれの 国境を越えて多面的な交流が進むグローバル化の時代には、多様な価値観や世界観を互いに認め合い、諸問題の解決に努めながら、それぞれが未来を切り拓いていく力が求められます。
+
+こうした認識のもと、国際教養大学は「国際教養（International Liberal Arts）」という新しい教学理念を掲げ、英語をはじめとする外国語の卓越したコミュニケーション能力と豊かな教養、グローバルな専門知識を身に付けた実践力のある人材を養成し、国際社会と地域社会に貢献することを理念としています。 がはいるお
+</p>
+</div>
+
+<div class="ClubCircleListContent">
+<img src="../../img/CircleImg/CircleCategory.jpg">
+<p class="ClubCircleListCategory">
+活動目的
+</p>
+<p class="ClubCircleListDifferent">
+めんつゆの存在意義と神の存在について解き明かしてみせます。 
+</p>
+</div>
+
+</div>
+<img class="ClubCircleImg" src="../../img/CircleImg/MoaImg.jpg">
+
 </div>
 
 </div>
