--- a/Classes/Classes.html
+++ b/Classes/Classes.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <head>
-<title>NPsee</title>
+<title>Classes</title>
 <meta http-equiv="Content-Type" content="text/html;charset=UTF-8">
 <meta http-equiv="Content-Style-Type" content="text/css">
 <link rel="stylesheet" href="../CSS/Top.css" type="text/css">
@@ -64,30 +64,54 @@ Point:
 <a href="">
 <div id="SideLogout" class="Side">
 ログアウト</div></a>
+
 </div>
 </div>
 
 <div id="MainContent">
+<div class="Classes">
+<h1 class="ClassesTitle">単位のその先へ。</h1>
+</div>
+<p class="ClassesDescri">
+新学期に向けて履修登録するときにどんな授業かわからないままレジストしてしまうと…
+<br>
+始まってから慌ててウィズドローしたり。
+<br>
+予想よりずっと課題が大変だったり。
+<br>
+必修科目を見落としたり。
+<br>
+面白いクラスを逃したり。
+<br>
+<br>
+このページでは実際に履修したみなさんの経験をもとに、
+<br>AIUの科目一つ一つの授業内容、課題の量、先生の様子などが詳しくわかります。
+<br>レジストするときにここを参考にすれば、よりスマートに履修計画が立てられるはず。
+<br>そしてあなたが取った授業についてアンケートで答えて、他の人達にも教えて助けてあげましょう。 
+</p>
 
-<div id="Projects">
-
-<div id="ProjectsTitle">
-Project一覧
+<div class="AnswerClasses">
+<img class="AnswerClassesimg" src="../img/button/Answer/answer1-1.png">
+<div id="ClassList">
+<a href="" class="class">Marketing Principles</a>
+</div>
 </div>
 
-
-<div id="ProjectList">
-<a href=""></a>
+<div class="SeeClasses">
+<img class="SeeClassesimg" src="../img/button/SeeTips/seetips1-1.png">
 </div>
-
-
 </div>
 
 </div>
-
 </div>
 <script type="text/javascript" src="../JS/jquery.js"></script>
 <script type="text/javascript">
+$(".AnswerClassesimg").click(function(){
+	$(".class").slideToggle(200,function(){
+		
+	})
+})
+
 $(".Side").hover(
 	function(){
 		$(this).css('background-color','#e3fadb');
@@ -96,6 +120,18 @@ $(".Side").hover(
 
 	}
 )
+
+$("#SeeProjectimg").hover(function(){
+	$(this).attr('src','../img/button/SeeTips/seetips1-2.png');
+},function(){
+	$(this).attr('src','../img/button/SeeTips/seetips1-1.png');
+})
+
+$("#AnswerProjectimg").hover(function(){
+	$(this).attr('src','../img/button/Answer/answer1-2.png');
+},function(){
+	$(this).attr('src','../img/button/Answer/answer1-1.png');
+})
 </script>
 </body>
 </html>
