--- a/TOP/Request.html
+++ b/TOP/Request.html
@@ -72,7 +72,9 @@ Point:
 <div id="Opinion">
 
 <div id="OpinionTitle">
-ご意見板
+このページは MoaTips を利用してくださった方のご意見をお聞きするためのものです。
+<br>このサイトを使って便利だと思ったことや、もう少し変えてほしいところなどはありましたか？
+<br>当てはまるボックスにあなたの思ったことをお書きください。
 </div>
 
 
@@ -85,7 +87,7 @@ Point:
 <div class="inputbox"><textarea class="textarea" cols="63" rows="5"></textarea></div>
 <div class="inputdes">MoaTipsのどこを改善してほしいですか？</div>
 <div class="inputbox"><textarea class="textarea" cols="63" rows="5"></textarea></div>
-<div class="inputdes">追加してほしい機能 or 情報はありましたか？是非教えてください＾＾</div>
+<div class="inputdes">追加してほしい機能 or 情報はありましたか？是非教えてください。</div>
 <div class="inputbox"><textarea class="textarea" cols="63" rows="5"></textarea></div>
 <div class="inputdes">その他に何か意見がありましたらご記入下さい。</div>
 <div class="inputbox"><textarea class="textarea" cols="63" rows="5"></textarea></div>
