--- a/Classes/Classes.html
+++ b/Classes/Classes.html
@@ -93,7 +93,6 @@ Point:
 <div class="AnswerClasses">
 <img class="AnswerClassesimg" src="../img/button/Answer/answer1-1.png">
 <div id="ClassList">
-<a href="" class="class">Marketing Principles</a>
 </div>
 </div>
 
@@ -121,13 +120,13 @@ $(".Side").hover(
 	}
 )
 
-$("#SeeProjectimg").hover(function(){
+$(".SeeClassesimg").hover(function(){
 	$(this).attr('src','../img/button/SeeTips/seetips1-2.png');
 },function(){
 	$(this).attr('src','../img/button/SeeTips/seetips1-1.png');
 })
 
-$("#AnswerProjectimg").hover(function(){
+$(".AnswerClassesimg").hover(function(){
 	$(this).attr('src','../img/button/Answer/answer1-2.png');
 },function(){
 	$(this).attr('src','../img/button/Answer/answer1-1.png');
