--- a/Abroad/area1.html
+++ b/Abroad/area1.html
@@ -136,6 +136,8 @@ Point:
 
 </div>
 <script type="text/javascript" src="../JS/jquery.js"></script>
+<script type="text/javascript" src="../JS/moa.js"></script>
+
 <script type="text/javascript">
 hoverarea(1);
 
@@ -145,34 +147,6 @@ for(i=0;i<=47;i++){
 
 
 //sideeffect;hover
-$(".Side").hover(
-	function(){
-		$(this).css('background-color','#e3fadb');
-	},function(){
-		$(this).css('background-color','white');
-
-	}
-)
-
-
-//hide in the beginning
-
-
-//define hoverfunc
-function hoverarea(i){
-	$("#area"+i).hover(function(){
-	$('#area'+i).attr('src','img/wm/area'+i+'-2.png')},function(){
-	$('#area'+i).attr('src','img/wm/area'+i+'-1.png')}
-);
-}
-
-
-function hoveruniA(i){
-	$("#uniA"+i).hover(function(){
-	$('#uniA'+i).attr('src','img/wm/icon.png')},function(){
-	$('#uniA'+i).attr('src','img/wm/uniA'+i+'.png')}
-);
-}
 
 
 </script>
