--- a/Circles/CircleLeaderAnswer.html
+++ b/Circles/CircleLeaderAnswer.html
@@ -85,7 +85,7 @@ Point:
 <div id="OpinionInputLeft">
 <div class="inputdes">1.　正式な団体名を教えてください。</div>
 <div class="inputbox"><textarea class="textarea" cols="63" rows="1"></textarea></div>
-<div class="inputdes">2.　現在活動に参加しているメンバーの人数を記入してください。 </div>
+<div class="inputdes">2.　正式なメンバーの人数を記入してください。 </div>
 <div class="inputbox"><textarea class="textarea" cols="63" rows="1"></textarea></div>
 <div class="inputdes">3.　活動日は毎週何曜日、あるいは毎月何日ほどですか？</div>
 <div class="inputbox"><textarea class="textarea" cols="63" rows="2"></textarea></div>
