--- a/Classes/AnswerClass.html
+++ b/Classes/AnswerClass.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <head>
-<title>CircleLeaderAnswer</title>
+<title>AnswerClass</title>
 <meta http-equiv="Content-Type" content="text/html;charset=UTF-8">
 <meta http-equiv="Content-Style-Type" content="text/css">
 <link rel="stylesheet" href="../CSS/Top.css" type="text/css">
@@ -69,7 +69,7 @@ Point:
 
 <div id="MainContent">
 
-<div id="Opinion">
+<div id="AnswerClass">
 
 <div id="OpinionTitle">
 各団体代表者の皆様へ
