--- a/Login/CreateAccount.html
+++ b/Login/CreateAccount.html
@@ -42,6 +42,15 @@
 		<option value="なし">なし</option>
 	</select>
 </div>
+<div class="input"><select name="SQ" id="SQ">
+		<option value="">お選び下さい</option>
+		<option value="SQ1">ドラえもんの秘密道具で一番好きなものは？</option>
+		<option value="SQ2">サザエさん一家で一番嫌いな人物は？</option>
+	</select>
+</div>
+<div class="input">
+<textarea cols="20" rows="1"></textarea>
+</div>
 </form>
 </div>
 
@@ -54,12 +63,17 @@
 <div class="area">留学申請時TOEFL</div>
 <div class="area">留学申請時GPA</div>
 <div class="area">入学前留学経験</div>	
+<div class="area">秘密の質問</div>	
+<div class="area">秘密の質問の答え</div>	
+
 </div>
 
 </div>
 
 <div id="Rule">
-<p><a href="">利用規約</a>※必ずお読みください</p>
+<p><a href="">利用規約</a>
+<br>
+※必ずお読みください</p>
 </div>
 <div id="CA">
 <input type="image" src="../img/button/CreateAccount/CA3.png" id="CreateAccountButton" width="190px" height="50px">
