--- a/Login/SecretQuestion.html
+++ b/Login/SecretQuestion.html
@@ -3,18 +3,41 @@
 <title>Moatips SecretQestion</title>
 <meta http-equiv="Content-Type" content="text/html;charset=UTF-8">
 <meta http-equiv="Content-Style-Type" content="text/css">
-<link rel="stylesheet" href="../CSS/Top.css" type="text/css">
+<link rel="stylesheet" href="../CSS/Secret.css" type="text/css">
 <meta http-equiv="Content-Script-Type" content="text/javascript">
 </head>
 <body style="background-image : url(../img/a9.png)">
 <div class="container">
-<h2>よくあることなのでご安心を＾＾</h2>
+<h2>よくあることなのでご安心を。</h2>
 <p>学籍番号を入力の上、秘密の質問にお答えください。</p>
 <form>
-<table>
-<tr><td>ID:</td><td><input type="text"></td></tr>
-<tr><td>秘密の質問１<br>「１＋１＝？」</td><td><input type="text"></td></tr>
-</table>
+ID:<input type="text">
+<br>
+秘密の質問<input type="text">
+
+<div id="InputForm">
+
+<div id="right">
+<form>
+<div class="input"><select name="SQ" id="SQ">
+		<option value="">お選び下さい</option>
+		<option value="SQ1">ドラえもんの秘密道具で一番好きなものは？</option>
+		<option value="SQ2">サザエさん一家で一番嫌いな人物は？</option>
+	</select>
+</div>
+<div class="input">
+<textarea cols="20" rows="1" id="SA"></textarea>
+</div>
+</form>
+</div>
+
+<div id="left">
+<div class="area">秘密の質問</div>	
+<div class="area">秘密の質問の答え</div>	
+
+</div>
+
+
 <div id="SQSend">
 <input type="image" src="../img/" width="100px" height="50px">
 </div>
