--- a/Circles/CircleMemberAnswer.html
+++ b/Circles/CircleMemberAnswer.html
@@ -83,7 +83,7 @@ Point:
 <form action="">
 
 <div id="OpinionInputCenter">
-<div class="inputdes">1.　あなた参加頻度はどのくらいですか </div>
+<div class="inputdes">1.　あなたの参加頻度はどのくらいですか </div>
 <div class="inputbox">
 	<input type="checkbox" id="CircleMemberQ1-1" value="1"><label for="CircleMemberQ1-1" class="checkbox"> ほとんど参加してない</label>
 	<br>
