--- a/Classes/Classes.html
+++ b/Classes/Classes.html
@@ -91,13 +91,13 @@ Point:
 </p>
 
 <div class="AnswerClasses">
-<img class="AnswerClassesimg" src="../img/button/Answer/answer1-1.png">
+<a href=""><img class="AnswerClassesimg" src="../img/button/Answer/answer1-1.png"></a>
 <div id="ClassList">
 </div>
 </div>
 
 <div class="SeeClasses">
-<img class="SeeClassesimg" src="../img/button/SeeTips/seetips1-1.png">
+<a href=""><img class="SeeClassesimg" src="../img/button/SeeTips/seetips1-1.png"></a>
 </div>
 </div>
 
