--- a/Login/SecretQuestion.html
+++ b/Login/SecretQuestion.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <head>
-<title>Moatips SecretQestion</title>
+<title>SecretQuestion</title>
 <meta http-equiv="Content-Type" content="text/html;charset=UTF-8">
 <meta http-equiv="Content-Style-Type" content="text/css">
 <link rel="stylesheet" href="../CSS/Secret.css" type="text/css">
