--- a/NewProjects/NPanswer.html
+++ b/NewProjects/NPanswer.html
@@ -81,28 +81,30 @@ Point:
 <div id="OpinionInputLeft">
 <div class="inputdes">1.　企画名</div>
 <div class="inputbox"><textarea class="textarea" cols="63" rows="1"></textarea></div>
-<div class="inputdes">2.　代表者の名前・連絡先</div>
-<div class="inputbox"><textarea class="textarea" cols="63" rows="3"></textarea></div>
-<div class="inputdes">3.　以下の項目から当てはまるものを選んでください。</div>
-<div class="inputbox"><select class="textarea">
-	<option class="selectarea" value="clubcircle">通年で活動する新クラブor サークル</option>
-	<option class="selectarea" value="festival">学校祭に向けた団体＆委員会</option>
-	<option class="selectarea" value="accident">有事に急きょ設立する団体</option>
-		</select></div>
-<div class="inputdes">4.　活動目的</div>
+<div class="inputdes">2.　以下の項目から当てはまるものを選んでください。</div>
+<div class="inputbox">
+	<input type="checkbox" id="NPAnswerQ1-1" value="1"><label for="CircleMemberQ1-1" class="checkbox"> 通年のクラブ＆サークル</label>
+	<br>
+	<input type="checkbox" id="NPAnswerQ1-2" ><label for="CircleMemberQ1-2" class="checkbox"> AIU祭の有志企画</label>
+	<br>
+	<input type="checkbox" id="NPAnswerQ1-3" ><label for="CircleMemberQ1-3"class="checkbox"> そこそこ参加している</label>
+</div>
+<div class="inputdes">3.　活動目的</div>
 <div class="inputbox"><textarea class="textarea" cols="63" rows="20"></textarea></div>
-<div class="inputdes">5.　活動する期限日（例：通年・4/20~7/8）</div>
+<div class="inputdes">4.　活動する期限日（例：通年・4/20~7/8）</div>
 <div class="inputbox"><textarea class="textarea" cols="63" rows="1"></textarea></div>
-<div class="inputdes">6.　現在の活動メンバー数</div>
+<div class="inputdes">5. 現在の活動メンバー数</div>
 	<div class="inputbox"><textarea class="textarea" cols="63" rows="1"></textarea></div>
-	<div class="inputdes">7.　新メンバー募集有無＆定員数</div>
+	<div class="inputdes">6.　新メンバー募集有無＆定員数</div>
 	<div class="inputbox"><textarea class="textarea" cols="63" rows="2"></textarea></div>
-	<div class="inputdes">8.　活動時間（例：毎週金曜、18：30~20:00）</div>
+	<div class="inputdes">7.　活動時間（例：毎週金曜、18：30~20:00）</div>
 	<div class="inputbox"><textarea class="textarea" cols="63" rows="2"></textarea></div>
-	<div class="inputdes">9.　活動場所</div>
+	<div class="inputdes">8.　活動場所</div>
 	<div class="inputbox"><textarea class="textarea" cols="63" rows="3"></textarea></div>
-	<div class="inputdes">10.　PRやこれからの活動に望むことをお願いします。</div>
+	<div class="inputdes">9.　PRやこれからの活動に望むことをお願いします。</div>
 	<div class="inputbox"><textarea class="textarea" cols="63" rows="15"></textarea></div>
+	<div class="inputdes">10.　代表者の名前・連絡先</div>
+<div class="inputbox"><textarea class="textarea" cols="63" rows="3"></textarea></div>
 	<input type="image" id="OpinionSubmitimg" src="../img/button/FinalAnswer/FinalAnswer1-1.png" width="300px">
 </div>
 
