--- a/Circles/Circle.html
+++ b/Circles/Circle.html
@@ -83,116 +83,112 @@ Point:
 そんな方はぜひご利用下さい！</p>
 <div id="CultureCircles">
 <h2 id="CultureCirclesTitle">文化系</h2>
-<a href="">MOA(Marketing Organization in AIU)</a>
+<a href="" class="circle">MOA(Marketing Organization in AIU)</a>
 <br>
-<a href="">アカペラ部</a>
+<a href="" class="circle">アカペラ部</a>
 <br>
-<a href="">あにらぼ</a>
+<a href="" class="circle">あにらぼ</a>
 <br>
-<a href="">英語ディベート部</a>
+<a href="" class="circle">英語ディベート部</a>
 <br>
-<a href="">AIUゴスペルクワイヤー</a>
+<a href="" class="circle">AIUゴスペルクワイヤー</a>
 <br>
-<a href="">AIUかるた会</a>
+<a href="" class="circle">AIUかるた会</a>
 <br>
-<a href="">ABC(Akita Beach Clean) プロジェクト</a>
+<a href="" class="circle">ABC(Akita Beach Clean) プロジェクト</a>
 <br>
-<a href="">バイブルスタディサークル</a>
+<a href="" class="circle">バイブルスタディサークル</a>
 <br>
-<a href="">音楽隊</a>
+<a href="" class="circle">音楽隊</a>
 <br>
-<a href="">書道部</a> 
+<a href="" class="circle">書道部</a> 
 <br>
-<a href="">メディア研究クラブCiPEC</a>
+<a href="" class="circle">メディア研究クラブCiPEC</a>
 <br>
-<a href="">劇団ろうそくだんす(演劇部)</a>
+<a href="" class="circle">劇団ろうそくだんす(演劇部)</a>
 <br>
-<a href="">環境エコロジークラブ</a>
+<a href="" class="circle">環境エコロジークラブ</a>
 <br>
-<a href="">みつばち</a>
+<a href="" class="circle">みつばち</a>
 <br>
-<a href="">JCF(Japanese Conversation Friends)</a>
+<a href="" class="circle">JCF(Japanese Conversation Friends)</a>
 <br>
-<a href="">日本舞踊部</a>
+<a href="" class="circle">日本舞踊部</a>
 <br>
-<a href="">日本台湾学生会議</a>
+<a href="" class="circle">日本台湾学生会議</a>
 <br>
-<a href="">韓部</a> 
+<a href="" class="circle">韓部</a> 
 <br>
-<a href="">ラテン文化部</a>
+<a href="" class="circle">ラテン文化部</a>
 <br>
-<a href="">ル・ピモン</a> 
+<a href="" class="circle">ル・ピモン</a> 
 <br>
-<a href="">社会起業家団体APES</a>
+<a href="" class="circle">社会起業家団体APES</a>
 <br>
-<a href="">雑誌部「字-Dragon」</a>
+<a href="" class="circle">雑誌部「字-Dragon」</a>
 <br>
-<a href="">北東アジア学生ラウンドテーブル(SRT)</a>
+<a href="" class="circle">北東アジア学生ラウンドテーブル(SRT)</a>
 <br>
-<a href="">能代宇宙イベント広報戦略チーム</a>
+<a href="" class="circle">能代宇宙イベント広報戦略チーム</a>
 <br>
-<a href="">軽音楽部</a>
+<a href="" class="circle">軽音楽部</a>
 <br>
-<a href="">サービストラベルICC</a>
+<a href="" class="circle">サービストラベルICC</a>
 <br>
-<a href="">手話部</a>
+<a href="" class="circle">手話部</a>
 <br>
-<a href="">茶道部</a>
+<a href="" class="circle">茶道部</a>
 <br>
-<a href="">V-ACT</a>
+<a href="" class="circle">V-ACT</a>
 </div>
 <div id="SportsCircles">
 <h2 id="SportsCirclesTitle">運動系</h2>
-<a href="">ダンス部</a>
+<a href="" class="circle">ダンス部</a>
 <br>
-<a href="">女子フットサル部</a>
+<a href="" class="circle">女子フットサル部</a>
 <br>
-<a href="">男子フットサル部GPIAS</a>
+<a href="" class="circle">男子フットサル部GPIAS</a>
 <br>
-<a href="">ホッピングランナーズ</a>
+<a href="" class="circle">ホッピングランナーズ</a>
 <br>
-<a href="">少林寺拳法部</a>
+<a href="" class="circle">少林寺拳法部</a>
 <br>
-<a href="">サッカー部</a>
+<a href="" class="circle">サッカー部</a>
 <br>
-<a href="">軟式テニス部</a>
+<a href="" class="circle">軟式テニス部</a>
 <br>
-<a href="">水泳部</a>
+<a href="" class="circle">水泳部</a>
 <br>
-<a href="">卓球部</a>
+<a href="" class="circle">卓球部</a>
 <br>
-<a href="">硬式テニス部
+<a href="" class="circle">硬式テニス部
 <br> 
-<a href="">バレーボール部</a>
+<a href="" class="circle">バレーボール部</a>
 <br>
-<a href="">ヤートセ部</a>
+<a href="" class="circle">ヤートセ部</a>
 <br>
-<a href="">合気道部</a> 
+<a href="" class="circle">合気道部</a> 
 <br>
-<a href="">ラグビー部</a> 
+<a href="" class="circle">ラグビー部</a> 
 <br>
-<a href="">ARCO-IRIS(ハンドボール部)</a>
+<a href="" class="circle">ARCO-IRIS(ハンドボール部)</a>
 <br>
-<a href="">バドミントン部</a>
+<a href="" class="circle">バドミントン部</a>
 <br>
-<a href="">軟式野球部</a>
+<a href="" class="circle">軟式野球部</a>
 <br>
-<a href="">バスケットボール部</a>
+<a href="" class="circle">バスケットボール部</a>
 </div>
 </div>
 
 </div>
 </div>
 <script type="text/javascript" src="../JS/jquery.js"></script>
+<script type="text/javascript" src="../JS/moa.js"></script>
 <script type="text/javascript">
-$(".Side").hover(
-	function(){
-		$(this).css('background-color','#e3fadb');
-	},function(){
-		$(this).css('background-color','white');
+opacity(".circle");
 
-	}
-)
+
 
 </script>
 </body>
